--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.04.2022 08:15:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.04.2022 08:45:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,37 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 14.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, borůvkami a drobenkou</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Red curry polévka s krůtím masem v menu <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Red curry polévka s krůtím masem samostatně <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, čerstvá zelenina, tzatziki, pita chléb <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Lasagne s dýní a se špenátem, smetanová omáčka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
