--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.04.2022 07:32:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.04.2022 08:14:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z jihoceskeho pstruha s pecenymi cherry rajcaty a citronovo-horcicnym dresinkem, stouchane brambory s porkem, salatek 145</li><li>Spagety s chobotnici, omackou puttanesca {rajcata, ancovicky, olivy, kapary} a hoblinami tvrdeho syra {L} 175</li><li>Malajsky hovezi rendang s vonavym korenim, kokosovym mlekem a zazvorem, jasminova ryze, salatek 145</li><li>Smazeny teleci sekany rizek s ementalem, stouchane brambory s porkem, kysela okurka {L} 169</li><li>Lasagne se zelenym hrachem, cuketami a rajcaty zapecene ve smetanove omacce, salatek {L} 145</li></ol>
+<ol><li>Indicke kari s kousky rybich filetu {hejk, halibut, leskyne}, kvetakem, rajcaty,  paprikami a zazvorem, jasminova ryze 145</li><li>Italske risotto s uzenym divokym lososem, hraskem, citronem a creme fraiche 175</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 149</li><li>Danci plec pecena na jalovci, chlupate a zemlove knedliky, listovy spenat {L} 169</li><li>Kvetakove placicky s porkem, stouchane brambory s creme fraiche, tatarska omacka {L} 145</li></ol>
 </td>
 </tr>
 </table>
