--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.04.2022 08:14:06</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.04.2022 08:48:32</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,31 @@
 <h5>Čtvrtek, 21. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažené Krůtí gordon bleu s opečeným bramborem a tatarkou</strong>
+<strong>Kuřecí paličky v sýrovém těstíčku s kroketami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny se salsiciou a cuketou s parmazánem</strong>
+<strong>Masovo-celerová sekaná s vařeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							135,-
+						</span>
+</p>
+<p>
+<strong>Karbanátek s kroketami a tatarkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
 						</span>
 </p>
 <p>
@@ -52,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 21.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Malinový cheesecake</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Borůvkový cheesecake </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Citronový cheesecake</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Kokosový puding s hruškovým pyré  (bez lepku a laktózy) </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Zapečený cottage pie, cheddar, hrášek v máslové emulzi, rukola <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilované kuřecí prso plněné chřestem, smetanová omáčka, bylinkový kuskus <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Grilovaný hermelín na pohankovém salátu s hruškami, zelenina, rozpečená bageta <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
